--- a/style/style.css
+++ b/style/style.css
@@ -7,8 +7,24 @@ body {
     margin: 0;
     font-family: system-ui, sans-serif;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+
+button {
+    margin-top: 3rem;
+    appearance: none;
+    border: 0;
+    cursor: pointer;
+    padding: 0.8rem 1.6rem;
+    background-color: blueviolet;
+    color: aliceblue;
+    font-weight: bold;
+    border-radius: 6px;
+}
+
+button:hover {
+    background-color: rgb(117, 28, 201);
 }
 
 .books-grid {
