--- a/style/style.css
+++ b/style/style.css
@@ -52,6 +52,7 @@ input[type="checkbox"] {
     padding: 1rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+    grid-auto-rows: 1fr;
     gap: 1rem;
     width: 65vw;
     margin-top: 1rem;
