--- a/style/style.css
+++ b/style/style.css
@@ -9,26 +9,50 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 1rem;
 }
 
-button {
-    margin-top: 3rem;
+h2 {
+    margin-top: 0;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.btn {
     appearance: none;
     border: 0;
     cursor: pointer;
     padding: 0.8rem 1.6rem;
-    background-color: rgb(43, 107, 226);
-    color: aliceblue;
-    font-weight: bold;
     border-radius: 6px;
 }
 
-button:hover {
+.btn-primary {
+    background-color: rgb(43, 107, 226);
+    color: aliceblue;
+    font-weight: bold;
+}
+
+.btn-primary:hover {
     background-color: rgb(34, 91, 197);
+}
+
+.btn-remove {
+    background-color: rgb(221, 54, 54);
+    color: aliceblue;
+    font-weight: bold;
+}
+
+.btn-remove:hover {
+    background-color: rgb(201, 47, 47);
 }
 
 dialog div {
     text-align: center;
+    margin-top: 1rem;
 }
 
 ::backdrop {
@@ -50,6 +74,7 @@ input[type="checkbox"] {
 
 .error-message-form {
     color: red;
+    margin-bottom: 1rem;
 }
 
 .books-grid {
@@ -58,12 +83,12 @@ input[type="checkbox"] {
     grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
     grid-auto-rows: 1fr;
     gap: 1rem;
-    width: 65vw;
+    width: 80vw;
     margin-top: 1rem;
 }
 
 .card {
     border: 1px solid rgb(163, 163, 163);
     border-radius: 6px;
-    padding-inline: 1rem;
+    padding: 1rem;
 }
