--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,13 @@ h2 {
     background-color: rgb(201, 47, 47);
 }
 
+.flex-btn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 1rem;
+}
+
 dialog div {
     text-align: center;
     margin-top: 1rem;
